# base-v2

./: .gitignore  ARCHITECTURE.md  AUDIT-2026-06-09.md  Cargo.toml  README.md  TEST-GLOBAL-RULES.md
.github/workflows/: release.yml
.paul/: HANDOFF-2026-06-01.md  HANDOFF-2026-06-02-phase7-dashboard-scope.md  HANDOFF-2026-06-02-phase8-dashboard-plan01.md  HANDOFF-2026-06-02-phase8-plans03-04.md  HANDOFF-2026-06-03-phase8-plan06.md  HANDOFF-2026-06-03-phase9-plan01.md  PROJECT.md  ROADMAP.md  STATE.md  ledger.toml  paul.json  paul.toml
dashboard/: package-lock.json  package.json  vite.config.js
dashboard/src/: App.svelte  app.css
docs/: markdown-ontology-protocol.md  multi-tool-hook-bible.md  paul-graph-integration.md  settings-hook-config.md
scripts/ast/: cache.py  detect.py  extractor.py  onto_ast.py  ttl_serializer.py
src/: cli.rs  command.rs  config.rs  install.rs  lib.rs  manifest.rs  operator.rs  paul_template.toml  queries.default.toml  scaffold.rs  store.rs
src/crud/: ast_query.rs  decision.rs  entity.rs  goal.rs  milestone.rs  mod.rs  note.rs  project.rs  reminder.rs  rule.rs  task.rs
src/dashboard/: api.rs  server.rs
src/domain/: matcher.rs  mod.rs  session.rs  sync.rs
src/extract/: frontmatter.rs  ledger.rs  (+4 more)
tests/: crud_decision_test.rs  crud_project_test.rs  crud_remaining_test.rs  crud_task_test.rs  devmode_test.rs  domain_cli_test.rs  extract_test.rs  graph_injection_test.rs  hook_post_tool_use_test.rs  hook_session_start_test.rs  hook_user_prompt_submit_test.rs  memory_intercept_test.rs  note_test.rs  ontology_test.rs  signal_test.rs
(+81 files in other folders)
