[package]
name = "base"
version = "0.1.0"
edition = "2024"
description = "Proactive context-injection engine for Claude Code"

[dependencies]
oxigraph = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
