[package]
name = "base"
version = "0.1.8"
edition = "2024"
description = "Proactive context-injection engine for Claude Code"

[dependencies]
oxigraph = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = "0.4"
dirs = "5"
glob = "0.3"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
include_dir = "0.7"
open = "5"
ureq = { version = "2", features = ["json"] }
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3"
